# taiex-tick-backtest

./: .gitignore  pyproject.toml
scripts/: convert_csv_to_parquet.py  download_taifex.py  run_example.py
src/taiex_backtest/: __init__.py
src/taiex_backtest/analytics/: __init__.py  comparison.py  equity_curve.py  metrics.py  report.py  trade_analyzer.py
src/taiex_backtest/api/: app.py  dependencies.py  schemas.py
src/taiex_backtest/api/routers/: __init__.py  backtest.py  data.py  ws.py
src/taiex_backtest/data/: __init__.py  feed.py  schema.py  synthetic.py  taifex_parser.py  writer.py
src/taiex_backtest/domain/: __init__.py  enums.py  errors.py  events.py  models.py
src/taiex_backtest/engine/: __init__.py  backtest_engine.py  clock.py  commission.py  event_bus.py  latency.py  matching_engine.py  order_manager.py  position_tracker.py  risk_manager.py  slippage.py
src/taiex_backtest/optimization/: __init__.py  grid_search.py  optimizer.py  parallel.py  walk_forward.py
src/taiex_backtest/strategy/: __init__.py  base.py  context.py  registry.py  signal.py
src/taiex_backtest/ui/: __init__.py
src/taiex_backtest/ui/static/: style.css
src/taiex_backtest/ui/templates/: index.html
strategies/: __init__.py  example_ma_cross.py
tests/unit/: test_analytics.py  test_backtest_engine.py  test_data.py  test_domain.py  test_engine.py  test_phase4.py  test_phase5.py  test_phase6.py  test_strategy.py  test_taifex_parser.py
