[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taiex-backtest"
version = "0.1.0"
description = "TAIEX Futures Tick-level Backtesting System"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
optimization = ["optuna>=3.6.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.100.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/taiex_backtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
